--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,10 +1,11 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo-jhs.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>JHS Store - Tu tienda de aplicaciones Android</title>
+    <meta name="description" content="JHS Store - La mejor tienda de aplicaciones Android de JHServices" />
   </head>
   <body>
     <div id="root"></div>
