--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo-jhs.svg" />
+    <link rel="icon" type="image/png" href="/logo-jhs.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JHS Store - Tu tienda de aplicaciones Android</title>
     <meta name="description" content="JHS Store - La mejor tienda de aplicaciones Android de JHServices" />
